# Kursach_BETA

./: .gitignore  README.md  pyproject.toml
data/: config.py  operations.xls  test_get_list_dict.json  test_get_list_dict_json.json  test_operations.xls  test_user_settings.json  user_settings.json
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
