[tool.poetry]
name = "kyrsachbeta"
version = "0.1.0"
description = ""
authors = ["rinat shelkov <rinarserov@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
numpy = "^1.26.2"
openpyxl = "^3.1.2"
pandas = "^2.1.3"
requests = "^2.31.0"
xlrd = "^2.0.1"
python-dotenv = "^1.0.0"
pandas-stubs = "^2.1.1.230928"
types-requests = "^2.31.0.10"
stubs = "^1.0.0"


[tool.poetry.group.lint.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 119

[tool.isort]
line_length = 119


